feat(android): run desktop game with interactive GL4ES UI